test/files/neg/t10662b.check
px_2.scala:16: error: reference to X is ambiguous;
it is both defined in package p and imported subsequently by
import r.X
      implicitly[T[X]]   // ambiguous
                   ^
1 error
